# engineering_framework

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE.md.metadata.json  IMPLEMENTATION_GUIDE.md.resolved.0  MANIFESTO.md.metadata.json  MANIFESTO.md.resolved  Makefile  README.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
.pm/: decisions.md
.pm/runtime/: acceptance-review.md  active-stage.md  blockers.md  handoff.md  loop-control  loop-log.md  next-task.md  spike-report.md  state.yaml  worker-config.yaml  worker-report.md
.pm/stable/: acceptance-rubric.md  architecture-guardrails.md  evidence.md  product.md  roadmap.md  stage-definitions.md  ui-direction.md  user-journeys.md  ux-principles.md  value-proposition.md
references/: AUTOPILOT_RULES.md  CACHE_GUIDE.md  DOMAIN-AWARENESS.md  GETTING_STARTED.md  PHASE_DETECTION.md  ROUTING_TABLE.md
references/policies/: blast-radius.yaml  cache-context.yaml  gates.yaml  project_index.yaml
references/templates/: ARCHITECTURE.md  CACHE.md  CONSTITUTION_TEMPLATE.md  CONTRACT_TEMPLATE.md  CONTRIBUTING.md  DATA_MODEL_TEMPLATE.md  EVAL_TEMPLATE.md  PLAN_TEMPLATE.md  QUICKSTART_TEMPLATE.md  REPORT_TEMPLATE.md  SPEC_TEMPLATE.md  TASKS_TEMPLATE.md
scripts/: link-skills.sh  verify-ai.sh
scripts/harness_runtime/: __init__.py  cli.py  context.py  evals.py  installer.py  (+5 more)
templates/: ARCHITECTURE.md  ARCHITECTURE.md.metadata.json  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.md.metadata.json  Makefile  backend.md.metadata.json  backend.md.resolved
tests/: test_pm_runtime.py  test_semantic_atlas.py
(+53 files in other folders)
