[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness"
version = "3.0.0"
description = "Spec-governed, risk-classified engineering CLI for AI agents"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
harness = "scripts.harness_runtime.cli:main"

[tool.setuptools.packages.find]
include = ["scripts.harness_runtime*"]
